[package]
name = "curve"
version = "0.1.0"
authors = ["brandon"]
edition = "2018"

[dependencies]
winit = "^0.23"
wgpu = "^0.6.2"
futures = "^0.3.8"
lazy_static = "^1.4.0"
rand = "^0.8.0"

[dependencies.bytemuck]
version = "^1.4"
features = [
  'derive',
]

[[bin]]
name = "main"
path = "src/main.rs"